--- a/Methods_Experiments.tex
+++ b/Methods_Experiments.tex
@@ -3,19 +3,19 @@
 
 
 \section{Block Importance Analysis}
-Identifying the least important parts of the model which can be compressed or removed with the least impact on the final model performance is crucial for structural model pruning. In the following, first different block selection criterias are presented followed by block selection algorithms tackling the challenge of identifying a subset of several blocks being compressed simultanously.
+Identifying the least important parts of the model which, can be compressed or removed with minimal impact on the final model performance, is crucial for effective structural model pruning. In the following, various block selection criterias are first presented, followed by selection algorithms tackling the challenge of identifying subsets of blocks for simultaneous compression.
 \label{sec:BlockImportanceAnalyses}
 \subsection{Block Selction Criterias}
 \subsubsection{Magnitude-Pruning}
 \label{sec:MagnitudePruning}
-In magnitude pruning \cite{han2015learning,filters2016pruning,lee2020layer}, the magnitudes of the weights of the individual components of a model are computed to serve as a proxy for their importance. The underlying assumption is that small weight magnitudes correspond to a low overall impact on the model performance, implying that model parts with lower weight magnitude should be compressed first. The aggregated magnitude $M_i$ of a transformer block $B_i$ is defined as the total Frobenius norm of its constituent weight matrices $W \in B_i$. To account for the multiple sub-layers within a block, we compute the block-wise magnitude as
+In magnitude pruning \cite{han2015learning,filters2016pruning,lee2020layer}, the magnitudes of the weights within individual model components are computed to serve as a proxy for their relative importance. The underlying assumption is that small weight magnitudes correspond to a low overall impact on the model performance, implying that architectural components with lower weight magnitudes should be prioritized for compression. The aggregated magnitude $M_i$ of a transformer block $B_i$ is defined as the total Frobenius norm of its constituent weight matrices $W \in B_i$. To account for the multiple sub-layers within a block, we compute the block-wise magnitude as
  \begin{equation} 
- 	M_i = \sqrt{\sum_{W \in B_i} |W|_F^2} \quad \text{with} \quad |W|_F = \sqrt{\sum_j \sum_k |w_{jk}|^2} \quad.
- \end{equation} The block with the smallest magnitude $M_s = \min_i(M_i)$ is then identified as the primary candidate for compression.
+ 	M_i = \sqrt{\sum_{W \in B_i} |W|_F^2} \quad \text{with} \quad \|W\|_F = \sqrt{\sum_j \sum_k |w_{jk}|^2} \quad.
+ \end{equation} Consequently, the block with the smallest magnitude $M_s = \min_i(M_i)$ is identified as the primary candidate for compression.
 
 \subsubsection{Representational Similarity Analysis}
 \label{sec:CKA}
-Another approach to identify redundant model components is to compare their input representations with their corresponding output representations \cite{men2024shortgpt}. If the transformation between the input and output is marginal, indicating that the specific component performs an approximate identity mapping, the model part is considered a candidate for removal. To quantify the similarity between the input and output features of a transformer block, the central kernel alignment (\gls{CKA}) metric \cite{kornblith2019similarity, pons2024effective} is employed. Let $X \in \mathbb{R}^{n\times d}$ denote the input and $Y \in \mathbb{R}^{n\times d}$ the output features which should be compared. First, the kernels $K$ and $L$ need to be chosen which are the inner product of the input $K=XX^T$ and the output $L=YY^T$ in the linear case. To ensure invariance to mean shifts, the centering matrix $H=I - \frac{1}{n} 11^T$ is applied. The final \gls{CKA} score is given by 
+Another approach to identify redundant model components is to compare their input representations with their corresponding output representations \cite{men2024shortgpt}. If the transformation between the input and output is marginal, indicating that the specific component performs an approximate identity mapping, the model part is considered a candidate for removal. To quantify the similarity between the input and output features of a transformer block, the Central Kernel Alignment (\gls{CKA}) metric \cite{kornblith2019similarity, pons2024effective} is employed. Let $X \in \mathbb{R}^{n\times d}$ denote the input and $Y \in \mathbb{R}^{n\times d}$ the output features to be compared. First, the kernels $K$ and $L$ need to be chosen which are the inner products of the input $K=XX^T$ and the output $L=YY^T$ in the linear case. To ensure invariance to mean shifts, the centering matrix $H=I - \frac{1}{n} 11^T$ is applied. The final \gls{CKA} score is then given by 
 \begin{equation}
 	\text{CKA}(K,L) = \frac{\text{HSIC}(K,L)}{\sqrt{\text{HSIC}(K,K) \text{HSIC}(L,L)}} \quad.
 \end{equation}
@@ -23,29 +23,29 @@ This calculation utilizes the Hilbert-Schmidt Independence Criterion (\gls{HSIC}
 
 \subsubsection{Metric Based Selection}
 \label{sec:MetricBasedSelection}
-A third approach to identify the least important model components is to compress all components individually, e.g. each transformer block, and compute for each configuration image quality metrics on a small reference dataset. Specifically, let $\{B_1, \dots, B_L\}$ denote the individual blocks of a transformer based model architecture. Each block is modified seperately leading to $L$ different model configuration $\{\{\hat{B}_1, \dots, B_L\}$, $\dots$, $\{B_1, \dots, \hat{B}_i, \dots,  B_L\}$, $\dots$,$\{B_1, \dots, \hat{B}_L\}\}$ where $\hat{B}_i$ indicates that the $i^\text{th}$ block is modified. For each model configuration the metrics are computed. In this work, the \gls{CMMD} and/or \gls{CLIP}-score are employed to rank the importance of the individual model components. While the \gls{CLIP}-score is used to evaluate the semantic prompt-image coherence, \gls{CMMD} serves as a measure for the general image quality and distributional fidelity. Since \gls{CMMD} and \gls{CLIP}-score produce values in different ranges and have an inverse optimization direction (minimization versus maximizaiton), for both metrics a separate ranking of the blocks is created where $r_{\text{CMMD},i}$ and  $r_{\text{CLIP},i}$ are the corresponding ranks of block $B_i$. The final importance score is obtained by computing the aggregated rank $r_{\text{final},i}$ from both metrics
+A third approach for identifying the least important model components involves compressing all components, such as each transformer block, independently and evaluating the resulting configurations using image quality metrics on a small reference dataset. Specifically, let $\{B_1, \dots, B_L\}$ denote the individual blocks of a transformer-based model architecture. Each block is modified seperately resulting in $L$ distinct model configurations $\{\{\hat{B}_1, \dots, B_L\}$, $\dots$, $\{B_1, \dots, \hat{B}_i, \dots,  B_L\}$, $\dots$,$\{B_1, \dots, \hat{B}_L\}\}$ where $\hat{B}_i$ indicates that the $i^\text{th}$ block is modified. For each model configuration, the metrics are computed. In this work, the \gls{CMMD} and/or \gls{CLIP}-score are employed to rank the importance of the individual model components. While the \gls{CLIP}-score is used to evaluate semantic prompt-image coherence, \gls{CMMD} serves as a measure of general image quality and distributional fidelity. Since \gls{CMMD} and the \gls{CLIP}-score produce values in different ranges and have opposing optimization direction (minimization versus maximization), for both metrics a separate ranking of the blocks is created where $r_{\text{CMMD},i}$ and  $r_{\text{CLIP},i}$ are the corresponding ranks of block $B_i$. The final importance score is obtained by computing the aggregated rank $r_{\text{final},i}$ as
 \begin{equation}
 	r_{\text{final},i} = r_{\text{CMMD},i} + r_{\text{CLIP},i} \quad.
 	\label{eq:combined_importance}
 \end{equation}
-In the linear progressive compression approach (see Sec. \ref{sec:LinearProgressiveCompression}) the compression-scheme of the individual model parts leads to different numbers of removed parameters due to repeated compression of individual blocks and different compression ratios per block. Therefore, only the \gls{CMMD} value per removed parameters $\frac{\text{CMMD}_i}{\text{Removed Parameters}}$ is leveraged to quantify the degradation of image quality per removed parameter and to rank the blocks to ensure fair comparison.
+In the linear progressive compression approach (see Sec. \ref{sec:LinearProgressiveCompression}) the compression strategy of the individual model parts leads to different numbers of removed parameters due to repeated compression and different compression ratios per block. Therefore, the \gls{CMMD} value normalized by the number of removed parameters $\frac{\text{CMMD}_i}{\text{Removed Parameters}}$ is leveraged to quantify the degradation of image quality per removed parameter and to rank the blocks to ensure a fair comparison.
 \subsection{Block Selection Algorithms}
-The need for the use of block selection algorithms results from a specific challenge in model pruning utilizing the metric based block selection approach. The challenge is that the importance of individual model components, e.g. transformer blocks, are normally determined in isolation meaning only one block is modified and the remaing parts of the model are fixed for computing the metrics.  However, in most cases, several components are compressed simultaneously. It cannot necessarily be assumed that removing the model components that individually had the least impact on model performance will also result in the best combination with the least reduction in image quality. In the following, methods to select the best subset of the model components for compression are described and investigated in Sec. \ref{sec:ExpBlockImportanceAnalysis}.
+The necessity of block selection algorithms arises from a specific challenge in metric-based structural pruning. Specifically, the importance of individual model components, e.g. transformer blocks, is typically determined in isolation, meaning only one block is modified, while the remaing parts of the model are held fixed during evaluation.  However, in practical applications, several components are compressed simultaneously. It cannot necessarily be assumed that the simultaneous removal of components with the lowest individual impact will yield the optimal combination for preserving image quality. In the following, methods to select the best subset of model components for compression are described, and subsequently evaluated in Sec. \ref{sec:ExpBlockImportanceAnalysis}.
 \label{sec:BlockSelectionAlgo}
 \subsubsection{Greedy Block Selection}
 \label{sec:GreedyBlockSelection}
-The greedy algorithm is applied alongside the metric-based selection criteria. It is an iterative procedure where the importance of all uncompressed blocks is determined to identify and compress the least critical one. Following this step, the block importance is re-evaluated for all remaining uncompressed blocks. Concretely, let the model consist of $L$ transformer blocks $B=\{B_1, \dots, B_L\}$. 
-In the first iteration, for all $L$ combinations of model configurations $\mathcal{M}^{(1)} = \{ (B \setminus \{B_i\}) \cup \{\hat{B}_i\} \mid 1 \leq i \leq L \}$ the metrics are computed and the best block $B_j$ is selected according to the ranking. Let $\bar{B}_j$ denote the compressed version of block $B_j$.
- In the second iteration, the metrics are re-computed for all $L-1$ uncompressed blocks
- $\mathcal{M}^{(2)} = \{ (B \setminus \{B_i, B_j\}) \cup \{\hat{B}_i, \bar{B}_j\} \mid 1 \leq i \leq L, i \neq j \}$.  For the $n^\text{th}$ iteration $L-(n-1)$ uncompressed blocks remain. Let $B_\text{comp}$ denote the set of all previously compressed blocks then the potential candidates for compression are given by  $\mathcal{M}^{(n)} = \{ (B \setminus (B_\text{comp} \cup {B_i})) \cup \bar{B}_\text{comp} \cup {\hat{B}_i} \mid B_i \in B \setminus B_\text{comp} \}$.
- This process is repeated until the desired number of blocks to be compresssed has been identified.
+The greedy algorithm is applied in conjunction with the metric-based selection criterion. It is an iterative procedure in which the importance of all currently uncompressed blocks is determined to identify and compress the least critical one. Following this step, the block importance is re-evaluated for all remaining uncompressed blocks. Concretely, let the model consist of $L$ transformer blocks $B=\{B_1, \dots, B_L\}$. 
+In the first iteration, the metrics are computed for all $L$ possibel model configurations $\mathcal{M}^{(1)} = \{ (B \setminus \{B_i\}) \cup \{\hat{B}_i\} \mid 1 \leq i \leq L \}$ and the optimal block $B_j$ is selected according to the ranking. Let $\bar{B}_j$ denote the compressed version of block $B_j$.
+ In the second iteration, the metrics are re-computed for all $L-1$ remaining blocks
+ $\mathcal{M}^{(2)} = \{ (B \setminus \{B_i, B_j\}) \cup \{\hat{B}_i, \bar{B}_j\} \mid 1 \leq i \leq L, i \neq j \}$.  For the $n^\text{th}$ iteration $L-(n-1)$ uncompressed blocks remain. Let $B_\text{comp}$ denote the set of all previously compressed blocks then the potential candidates for compression are given by  $\mathcal{M}^{(n)} = \{ (B \setminus (B_\text{comp} \cup  \{B_i\})) \cup \bar{B}_\text{comp} \cup \{\hat{B}_i\} \mid B_i \in B \setminus B_\text{comp} \}$.
+ This process is repeated until the desired number of blocks to be compressed has been identified.
 %  $\{\{\hat{B}_1, \dots, \bar{B}_j, \dots, B_L\}$, $\dots$, $\{B_1, \dots, \hat{B}_{j-1}, \bar{B}_j, \dots,  B_L\}$, $\{B_1, \dots, \bar{B}_j, \hat{B}_{j+1}, \dots,  B_L\}$, $\dots$$\{B_1, \dots, \bar{B}_j, \dots, \hat{B}_L\}\}$. 
 %  
   % $\{\{\hat{B}_1, \dots, B_L\}$, $\dots$, $\{B_1, \dots, \hat{B}_i, \dots,  B_L\}$, $\dots$,$\{B_1, \dots, \hat{B}_L\}\}$ 
   
 \subsubsection{Black-Box Optimization with Optuna}
 \label{sec:Optuna}
-Optuna \cite{akiba2019optuna} is an open-source hyperparameter optimization framework. It primarily leverages a tree-strucured parzen estimator \cite{bergstra2011algorithms}, a bayesian optimization algorithm, to search the space of all possible hyperparmeter settings. It partitions the observed hyperparameter configurations into promising and non-promising candidates based on a user defined objective function. By modeling these two groups using probability density functions it draws a new set of hyperparameters that belongs to the promising group  with high probability. Through this informed search the global optimum can be found much faster than with non-adaptive methods like random or grid search. For an in-depth descritption of the Optuna algorithm the reader is refered to the original paper \cite{akiba2019optuna} as this would go beyond the scope of this work. \\
+Optuna \cite{akiba2019optuna} is an open-source hyperparameter optimization framework that primarily leverages a Tree-structured Parzen Estimator \cite{bergstra2011algorithms}, a Bayesian optimization algorithm, to search the space of all possible hyperparameter settings which in this work corresponds to the discrete combinatorial space of block pruning configurations. It partitions the observed hyperparameter configurations into promising and non-promising candidates based on a user-defined objective function. By modeling these two groups using probability density functions, it draws a new set of hyperparameters that belongs to the promising group  with high probability. Through this informed search, the global optimum can be located much faster than with non-adaptive methods such as random or grid search. For an in-depth description of the Optuna algorithm the reader is referred to the original paper \cite{akiba2019optuna} as a more detailed explanation would go beyond the scope of this work. \\
 
 
 %\subsubsection{Learnable Block Selection Algorithm}
