--- a/preamble.tex
+++ b/preamble.tex
@@ -24,7 +24,7 @@
 \usepackage{hypcap}
 \usepackage{tocbibind}
 \counterwithout*{footnote}{chapter}
-
+\usepackage{threeparttable}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 \usepackage{bm}
